0417 #84 fix PostManager title text overflow issue

--- a/src/views/PostManager/PostManager.less
+++ b/src/views/PostManager/PostManager.less
@@ -82,3 +82,31 @@ input[type='file'] {
     background: white;
   }
 }
+
+.post-title {
+  overflow: hidden;
+  position: relative;
+  line-height: 2rem;
+  max-height: 2rem; 
+  text-align: justify;
+  margin-right: -1em;
+  padding-right: 1em;
+  max-width: calc(100% - 1rem);
+  
+  &:before {
+    content: '...';
+    position: absolute;
+    right: 0;
+    bottom: 0;
+  }
+  
+  &:after {
+    content: '';
+    position: absolute;
+    right: 0;
+    width: 1em;
+    height: 1em;
+    margin-top: 0.2em;
+    background: white;
+  }
+}
